--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -7,4 +7,6 @@ services:
       - 8500:8500
     environment:
       - CONSUL_BIND_INTERFACE=eth0
-    command: ["agent" ,"-dev", "-ui", "-client=0.0.0.0"]
+    command: ["agent" ,"-dev", "-ui","-config-dir=./consul/config", "-client=0.0.0.0"]
+    volumes:
+      - ./consul/config:/consul/config
